--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,11 @@
            <artifactId>json-schema-validator</artifactId>
            <version>1.4.0</version>
        </dependency>
+       <dependency>
+           <groupId>org.zeromq</groupId>
+           <artifactId>jeromq</artifactId>
+           <version>0.6.0</version>
+       </dependency>
    </dependencies>
+
 </project>
